BRO-58 Repair Employee menu on mobile

--- a/apps/common/scss/components/Navbar/_NavbarMenu.scss
+++ b/apps/common/scss/components/Navbar/_NavbarMenu.scss
@@ -45,10 +45,6 @@
       }
     }
 
-    &--logout {
-      display: flex;
-    }
-
     &::after {
       margin-top: $spacing-x2;
       border-radius: 5px;
